fix: spacing issue on horizontal navigation

--- a/scss/_patterns_in-page-navigation.scss
+++ b/scss/_patterns_in-page-navigation.scss
@@ -261,6 +261,8 @@
         text-overflow: ellipsis;
         padding: $spv--medium $spv--large $spv--medium $spv--large;
         max-width: 50vw; // Small screens: limit link width to 1/2
+        vertical-align: top;
+        line-height: 1rem;
 
         // Adjust active state pseudo-border for horizontal layout
         &.is-active,
